# Cargo.toml
[package]
name = "comty"
version = "0.1.4-alpha"
authors = ["cherry <<EMAIL>>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "A modern chat software with rust and ncurses-rs"
homepage = "https://github.com/cherry-linux/comty"
repository = "https://github.com/cherry-linux/comty"
readme = "./README.md"
categories = ["command-line-interface", "command-line-utilities"]
keywords = ["chat", "cli", "communicator"]
exclude = [
    ".github/*",
    "docs/*"
]

[dependencies]
ncurses = { version = "0.17.0", features = ["wide"] }
regex = { version = "1.5.7", features = ["unicode"] }
dirs = "4.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
simplelog = "0.10"
